[package]
name = "rust-spaten"
version = "0.1.0"
authors = ["Thomas Skowron <th@skowron.eu>"]
edition = "2018"

license = "Apache-2.0"
repository = "https://github.com/thomersch/rust-spaten"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = { version = "2" }
wkb = { version = "0.7" }
geo-types = { version = "0.7" }

[lib]
name = "spaten"
path = "src/lib.rs"
